<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTitulo"
            android:textColor="#000FFF"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txtMatricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtMatricula"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtNombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtCosto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtCosto"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtDias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtDiaso"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtDescuento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtDescuento"
            android:inputType="number" />

        <Button
            android:id="@+id/btnAlta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAlta" />

        <Button
            android:id="@+id/btnConsulta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnConsulta" />

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    ListView lista;
    ArrayAdapter<String> adaptador;

    lista = (ListView)findViewById(R.id.listView);

    adaptador = new ArrayAdapter<String>(this,android.R.layout.simple_list_item_1);

    lista.setAdapter(adaptador);

</androidx.constraintlayout.widget.ConstraintLayout>